update api getListSchedules